Added bar chart

--- a/WebContent/itemInfo.html
+++ b/WebContent/itemInfo.html
@@ -79,6 +79,7 @@
 						<select id="selectDataView" name="name">
 							<option value="list">List</option>
 							<option value="chart">Chart</option>
+							<option value="barChart">Bar chart</option>
 						</select>
 					</div>
 
