Refactoring Added Function Create the whole data view component

--- a/WebContent/itemInfo.html
+++ b/WebContent/itemInfo.html
@@ -45,47 +45,7 @@
 
 				<h1>Data View</h1>
 
-				<div id="updateContainer">
-					<input type="button" id="updateViewButton" value="Update view" />
-					<input type="button" id="startAutoUpdateButton"
-						value="Start auto-update" /> <input type="button"
-						id="stopAutoUpdateButton" value="Stop auto-update" />
-				</div>
-
-				<!---->
-
-				<div id="dataBlock">
-					<div id="dataStrategyBlock">
-						<label> <strong>Select data type</strong>
-						</label>
-
-						<!---->
-
-						<select id="selectDataStrategy" name="name">
-							<option value="none">None</option>
-							<option value="average">Average</option>
-							<option value="singleAverage">Single average</option>
-						</select>
-					</div>
-
-					<!---->
-
-					<div id="dataViewBlock">
-						<label> <strong>Select data view</strong>
-						</label>
-
-						<!---->
-
-						<select id="selectDataView" name="name">
-							<option value="list">List</option>
-							<option value="chart">Chart</option>
-							<option value="barChart">Bar chart</option>
-						</select>
-					</div>
-
-
-					<div id="chartDataView" class="dataView"></div>
-				</div>
+				<div id="updateBlock"></div>
 			</div>
 		</div>
 	</div>
