--- a/WebContent/itemInfo.html
+++ b/WebContent/itemInfo.html
@@ -45,7 +45,7 @@
 
 				<h1>Data View</h1>
 
-				<div id="updateBlock"></div>
+				<div id="updateBlock" class="updateBlock"></div>
 			</div>
 		</div>
 	</div>
