index page fixed, And little UI changes

--- a/WebContent/editItem.html
+++ b/WebContent/editItem.html
@@ -13,7 +13,7 @@
 <body>
 <div class="blended_grid">
 		<div class="pageHeader">
-			<img alt="logo" src="images\oulu.png" align="middle"
+			<img alt="logo" src="images\oulu.png" align="middle" class="logo"
 				style="width: 268px; height: 109px"/><br /><br />
 				
 				<nav class="testNav">
