--- a/WebContent/ItemCreation.html
+++ b/WebContent/ItemCreation.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="blended_grid">
 		<div class="pageHeader">
-			<img alt="logo" src="images\oulu.png" align="middle"
+			<img alt="logo" src="images\oulu.png" align="middle" class="logo"
 				style="width: 268px; height: 109px" /><br /> <br />
 
 			<nav class="testNav">
@@ -43,21 +43,12 @@
 					</label> <label> <span>Item Description:</span> <textarea
 							id="itemDescription" name="itemDescription"
 							placeholder="Briefly describe the item"></textarea>
-					</label> <br /> <label> <span>&nbsp;</span><span>&nbsp;</span> <input
+					</label> <br /> <label> <span>&nbsp;</span><input
 						type="button" id="go" class="button" value="Create" />
 					</label>
 				</form>
 				<br /> <br />
 
-				<!--  -->
-
-				<div id=dataBlock>
-					<input id="showDataButton" type="button" value="Show Data">
-					<div id="data"></div>
-				</div>
-
-
-				<!--  -->
 
 				<table id=items class="items_table"></table>
 			</div>
