--- a/WebContent/giveFeedback.html
+++ b/WebContent/giveFeedback.html
@@ -14,7 +14,7 @@
 <body></head>
 <div class="blended_grid">
 		<div class="pageHeader">
-			<img alt="logo" src="images\oulu.png" align="middle"
+			<img alt="logo" src="images\oulu.png" align="middle" class="logo"
 				style="width: 268px; height: 109px"/><br /><br />
 				
 				<nav class="testNav">
@@ -48,7 +48,7 @@
 				
 				</label>
 				<br/>
-				 <label> <span>&nbsp;</span><span>&nbsp;</span> <input type="button" id="rate"
+				 <label> <span>&nbsp;</span> <input type="button" id="rate"
 					class="button" value="Rate" />
 				</label>
 			</form>
