--- a/WebContent/sessionInfoUI.html
+++ b/WebContent/sessionInfoUI.html
@@ -15,7 +15,7 @@
 
 	<div class="blended_grid">
 		<div class="pageHeader">
-			<img alt="logo" src="images\oulu.png" align="middle"
+			<img alt="logo" src="images\oulu.png" align="middle" class="logo"
 				style="width: 268px; height: 109px" /><br /> <br />
 
 			<nav class="testNav"> <span>&nbsp;</span> <span>&nbsp;</span> <label>
