'Create account key' ui working

--- a/WebContent/WEB-INF/account/createAccount.html
+++ b/WebContent/WEB-INF/account/createAccount.html
@@ -3,8 +3,20 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Create account</title>
+
+<script
+	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
+</script>
+
 </head>
 <body>
-Create account
+	<h2>Create account</h2>
+
+	<input type="text" id="mail" />
+	<input type="text" id="accountType" />
+	<input type="button" value="Send" id="registerAccountButton" />
+
+	<script src="resources/js/fb.account.js"></script>
+	<script src="resources/js/createAccount.js"></script>
 </body>
 </html>
