Create account key working

--- a/WebContent/WEB-INF/account/createAccount.html
+++ b/WebContent/WEB-INF/account/createAccount.html
@@ -15,6 +15,7 @@
 	<input type="text" id="mail" />
 	<input type="text" id="accountType" />
 	<input type="button" value="Send" id="registerAccountButton" />
+	<div id="keyContainer"></div>
 
 	<script src="resources/js/fb.account.js"></script>
 	<script src="resources/js/createAccount.js"></script>
