--- a/WebContent/WEB-INF/account/createAccount.html
+++ b/WebContent/WEB-INF/account/createAccount.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<link type="text/css" rel="stylesheet" href="stylesheet.css" />
 <title>Create account</title>
 
 <script
@@ -11,7 +12,6 @@
 </head>
 <body>
 	<h2>Create account</h2>
-
 	<input type="text" id="mail" />
 	<input type="text" id="accountType" />
 	<input type="button" value="Send" id="registerAccountButton" />
