--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -3,14 +3,16 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-<link href="popup.css" rel="stylesheet" type="text/css">
 <title>Session info</title>
 
 <script
 	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
 	
 </script>
+<script src="http://code.highcharts.com/stock/highstock.js
+"></script>
 <script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/modules/exporting.js"></script>
 </head>
 <body>
 
@@ -23,39 +25,41 @@
 				<span>&nbsp;</span> <input type="button" id="home" class="button"
 				value="Home" />
 			</label> <span>&nbsp;</span> <span>&nbsp;</span> <label> <span>&nbsp;</span>
-				<input type="button" id="updateCurrentSessionButton" class="button"
-				value="Current Session" />
+				<input type="button" id="rateItemList" class="button"
+				value="Rate Item" />
+			</label> <span>&nbsp;</span> <span>&nbsp;</span> <label> <span>&nbsp;</span>
+				<input type="button" id="updateViewButton" class="button"
+				value="Update View" />
 			</label> </nav>
 		</div>
 
 		<div class="pageContent_graphpage">
 			<div class="pageLeftMenu_graphpage">
 				<br />
-				<h1 style="width: 300px;">Item Info</h1>
-				<div class="sessionInfo" id="itemInformation"></div>
+				<h1 style="width: 300px;">Session Info</h1>
+				<div class="sessionInfo" id="sessionInfo"></div>
 				<br /> <br /> <br /> <br />
-				<div class="sessionInfo" id="sessionCont">
-					<br />
-					<h1 style="width: 300px;">Previous Sessions</h1>
-					<div class="sessionInfo" id="sessionArchive"></div>
+				<div class="listCont">
+					<h1 style="width: 300px;">Feedback Units</h1>
+					<div id="listDataView" class="listDataView"></div>
 				</div>
 			</div>
-
 			<div class="test_graphpage">
 
-				<h1>Data View</h1>
 
-				<div id="updateBlock" class="updateBlock"></div>
+				<h1>Chart View</h1>
+				<div id="chartDataView"></div>
+				
+
+
 			</div>
 		</div>
 	</div>
 
 
-	<script type="text/javascript" src="fb.js"></script>
-	<script type="text/javascript" src="fb.itemInfo.js"></script>
-	<script type="text/javascript" src="fb.item.js"></script>
 
+	<script type="text/javascript" src="test.js"></script>
 	<script type="text/javascript" src="main.js"></script>
-
+	<script type="text/javascript" src="sessionInfo.js"></script>
 </body>
 </html>
