--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -14,6 +14,8 @@
 <script src="http://code.highcharts.com/highcharts.js"></script>
 
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
+<script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
+<script src="https://rawgithub.com/laff/technical-indicators/master/technical-indicators.src.js"></script>
 </head>
 <body>
 
@@ -46,8 +48,14 @@
 				</div>
 			</div>
 			<div class="test_graphpage">
+		<form id="setPeriodForm" class="basic-grey">
+				<label> <span>Period:</span> <input name="value"
+					id="periodInput" type="number" />
 
-
+				</label> <label> <span>&nbsp;</span> <input type="button"
+					id="set" class="button" value="Go" />
+				</label>
+			</form>
 				<h1>Chart View</h1>
 				<div id="chartDataView"></div>
 				
