--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -15,7 +15,8 @@
 
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
 <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
-<script src="https://rawgithub.com/laff/technical-indicators/master/technical-indicators.src.js"></script>
+<script
+	src="https://rawgithub.com/laff/technical-indicators/master/technical-indicators.src.js"></script>
 </head>
 <body>
 
@@ -24,16 +25,17 @@
 			<img alt="logo" src="images\oulu.png" align="middle" class="logo"
 				style="width: 268px; height: 109px" /><br /> <br />
 
-			<nav class="testNav"> <span>&nbsp;</span> <span>&nbsp;</span> <label>
-				<span>&nbsp;</span> <input type="button" id="home" class="button"
-				value="Home" />
-			</label> <span>&nbsp;</span> <span>&nbsp;</span> <label> <span>&nbsp;</span>
-				<input type="button" id="rateItemList" class="button"
-				value="Rate Item" />
-			</label> <span>&nbsp;</span> <span>&nbsp;</span> <label> <span>&nbsp;</span>
-				<input type="button" id="updateViewButton" class="button"
-				value="Update View" />
-			</label> </nav>
+			<nav class="testNav">
+				<span>&nbsp;</span> <span>&nbsp;</span> <label> <span>&nbsp;</span>
+					<input type="button" id="home" class="button" value="Home" />
+				</label> <span>&nbsp;</span> <span>&nbsp;</span> <label> <span>&nbsp;</span>
+					<input type="button" id="rateItemList" class="button"
+					value="Rate Item" />
+				</label> <span>&nbsp;</span> <span>&nbsp;</span> <label> <span>&nbsp;</span>
+					<input type="button" id="updateViewButton" class="button"
+					value="Update View" />
+				</label>
+			</nav>
 		</div>
 
 		<div class="pageContent_graphpage">
@@ -48,17 +50,17 @@
 				</div>
 			</div>
 			<div class="test_graphpage">
-		<form id="setPeriodForm" class="basic-grey">
-				<label> <span>Period:</span> <input name="value"
-					id="periodInput" type="number" />
+				<form id="setPeriodForm" class="basic-grey">
+					<label> <span>Period:</span> <input name="value"
+						id="periodInput" type="number" />
 
-				</label> <label> <span>&nbsp;</span> <input type="button"
-					id="set" class="button" value="Go" />
-				</label>
-			</form>
+					</label> <label> <span>&nbsp;</span> <input type="button" id="set"
+						class="button" value="Go" />
+					</label>
+				</form>
 				<h1>Chart View</h1>
 				<div id="chartDataView"></div>
-				
+
 
 
 			</div>
