test page functional

--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -55,7 +55,7 @@
 						id="periodInput" type="number" />
 
 					</label> <label> <span>&nbsp;</span> <input type="button" id="set"
-						class="button" value="Go" />
+						class="button" value="Squeeze Graph" />
 					</label>
 				</form>
 				<h1>Chart View</h1>
