added button to navigate to the test Page for presentation purposes

--- a/WebContent/sessionInfoUI.html
+++ b/WebContent/sessionInfoUI.html
@@ -27,7 +27,10 @@
 			</label> <span>&nbsp;</span> <span>&nbsp;</span> <label> <span>&nbsp;</span>
 				<input type="button" id="updateViewButton" class="button"
 				value="Update View" />
-			</label> </nav>
+			</label> <label> <span>&nbsp;</span>
+				<input type="button" id="testViewButton" class="button"
+				value="Test View" />
+			</label></nav>
 		</div>
 
 		<div class="pageContent_graphpage">
