--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -55,7 +55,7 @@
 						id="periodInput" type="number" />
 
 					</label> <label> <span>&nbsp;</span> <input type="button" id="set"
-						class="button" value="Squeeze Graph" />
+						class="button" value="Squeeze Graph" /> <span>&nbsp;</span>
 					</label>
 				</form>
 				
