--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -36,7 +36,7 @@
 
 				<form id="userLoginForm" method="post" class="basic-grey">
 					<h1>Login</h1>
-					<label> <span>Email :</span> <input name="userEmail"
+					<label> <span>Username :</span> <input name="userEmail"
 						id="userEmail" type="email" placeholder="Input your email" />
 					</label> <label> <span>Password:</span> <input id="userPassword"
 						name="userPassword" type="password" placeholder="Input password"></input>
