registration page created! not linked to js page yet

--- a/WebContent/RegistrationPage.html
+++ b/WebContent/RegistrationPage.html
@@ -36,8 +36,7 @@
 
 				<form id="userLoginForm" method="post" class="basic-grey">
 					<h1>Login</h1>
-					<label> <span>Username :</span> <input 
-						id="mail" type="text" />
+					<label> <span>Username :</span> <input id="mail" type="text" />
 					</label> <label> <span>Account Type:</span> <select id="accountType">
 					<option>Owner</option>
 					<option>User</option>
