registration page (needs to be linked)

--- a/WebContent/RegistrationPage.html
+++ b/WebContent/RegistrationPage.html
@@ -15,19 +15,7 @@
 			<img alt="logo" src="images\oulu.png" align="middle" class="logo"
 				style="width: 268px; height: 109px" /><br /> <br />
 
-			<nav class="testNav">
-				<span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
-					<input type="button" id="home" class="button" value="Home" />
-				</label> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
-					<input type="button" id="itemList" class="button" value="Items" />
-				</label> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
-					<input type="button" id="rateItemList" class="button"
-					value="Rate Item" />
-				</label> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
-					<input type="button" id="sessionListButton" class="button"
-					value="Sessions" />
-				</label>
-			</nav>
+			
 		</div>
 
 		<div class="pageContent">
@@ -35,7 +23,7 @@
 			<div class="test">
 
 				<form id="userLoginForm" method="post" class="basic-grey">
-					<h1>Login</h1>
+					<h1>Create Account</h1>
 					<label> <span>Username :</span> <input id="mail" type="text" />
 					</label> <label> <span>Account Type:</span> <select id="accountType">
 					<option>Owner</option>
