--- a/WebContent/hello.html
+++ b/WebContent/hello.html
@@ -23,14 +23,7 @@
 								function() {
 								console.log('HAHAH');
 									fb.account.login($('#userEmail').val(),
-											 $(
-											'#userPassword').val()
-											, function() {
-										window.location.replace('home');
-									}, function() {
-										fb.notification('login failure', 'error');
-									});
-								});
+											 $('#userPassword').val())});
 			});});
 	</script>
 </body>
