test Pages based on templates

--- a/WebContent/closeFeedbackSession.html
+++ b/WebContent/closeFeedbackSession.html
@@ -8,7 +8,7 @@
 	
 </script>
 
-<title>Close Session</title>
+<title>Close Feedback Session</title>
 <body>
 	<div class="blended_grid">
 		<div class="pageHeader">
