edited the template and added buttons to all pages (work still needs to be done)

--- a/WebContent/test_CreateFBSession.html
+++ b/WebContent/test_CreateFBSession.html
@@ -17,6 +17,14 @@
 <body>
 	<script src="fb.js"></script>
 	
+	<script id="navContent" type="text">
+    <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
+					<input type="button" id="itemList" class="button" value="Items" />
+				</label> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
+					<input type="button" id="rateItemList" class="button"
+					value="Rate Item" />
+				</label>
+	</script>
 	<script id="htmlContent" type="text">
     <div class="test">
 
@@ -44,7 +52,7 @@
 	
 	<script>
 		$(document).ready(function() {
-			fb.html.simpleInitHTML($('#htmlContent').html(),function(){
+			fb.html.simpleInitHTML($('#htmlContent').html(),$('#navContent').html(),function(){
 				$('#enableSession').click(function() {
 					var jqxhr = $.post(
 
