--- a/WebContent/test_EditItem.html
+++ b/WebContent/test_EditItem.html
@@ -17,7 +17,17 @@
 <body>
 	<script src="fb.js"></script>
 	<script src="fb.item.js"></script>
-	<script src="fb.editItem.js"></script>
+	<script id="navContent">
+	<span>&nbsp;</span><span>&nbsp;</span> <label>
+	<span>&nbsp;</span> <input type="button" id="itemList"
+	class="button" value="Items" />
+</label>
+<span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
+	<input type="button" id="rateItemList" class="button"
+	value="Rate Item" />
+</label>
+
+	</script>
 	<script id="htmlContent" type="text">
     <div class="test">
 
@@ -39,7 +49,7 @@
 
 	<script>
 		$(document).ready(function() {
-			fb.html.simpleInitHTML($('#htmlContent').html(),function(){
+			fb.html.simpleInitHTML($('#htmlContent').html(),$('#navContent').html(),function(){
 				var self = fb.item;
 				self.updateItemList();
 
