--- a/WebContent/test_ItemInfo.html
+++ b/WebContent/test_ItemInfo.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-<title>Edit Item</title>
+<title>Item Information Page</title>
 
 <script
 	src="http://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js">
@@ -17,7 +17,12 @@
 <body>
 	<script src="fb.js"></script>
 	<script src="fb.item.js"></script>
-	<script src="fb.editItem.js"></script>
+	<script id="navContent">
+	<span>&nbsp;</span> <span>&nbsp;</span> <label> <span>&nbsp;</span>
+	<input type="button" id="updateCurrentSessionButton" class="button"
+	value="Current Session" />
+</label>
+	</script>
 	<script id="htmlContent" type="text">
 	<div class="pageContent_graphpage">
     	<div class="pageLeftMenu_graphpage">
@@ -43,7 +48,7 @@
 
 	<script>
 		$(document).ready(function() {
-			fb.html.simpleInitHTML($('#htmlContent').html(),function(){
+			fb.html.simpleInitHTML($('#htmlContent').html(),$('#navContent').html(),function(){
 				var itemAjax = fb.item;
 				var ajax = fb.session.ajax;
 				var itemIDParam = fb.getQueryParam('itemID');
