--- a/WebContent/test_ItemCreation.html
+++ b/WebContent/test_ItemCreation.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-<title>Enable Feedback Session</title>
+<title>Item Page</title>
 
 <script
 	src="http://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js">
@@ -17,6 +17,16 @@
 <body>
 	<script src="fb.js"></script>
 	<script src="fb.item.js"></script>
+	
+	<script id="navContent" type="text">
+    	 <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
+					<input type="button" id="itemList" class="button" value="Items" />
+				</label> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
+					<input type="button" id="rateItemList" class="button"
+					value="Rate Item" />
+				</label>
+	</script>
+	
 	
 	<script id="htmlContent" type="text">
     <div class="test">
@@ -43,7 +53,7 @@
 	
 	<script>
 		$(document).ready(function() {
-			fb.html.simpleInitHTML($('#htmlContent').html(),function(){
+			fb.html.simpleInitHTML($('#htmlContent').html(),$('#navContent').html(),function(){
 				var self = fb.item;
 
 				self.updateItemList();
