--- a/WebContent/test_RegistrationPage.html
+++ b/WebContent/test_RegistrationPage.html
@@ -17,10 +17,14 @@
 <body>
 	<script src="fb.js"></script>
 	<script src="fb.item.js"></script>
-	<script src="fb.editItem.js"></script>
+	<script id="navContent">
+	<span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
+	<input type="button" id="loginButton" class="button" value="login" /></label>
+	</script>
 	<script id="htmlContent" type="text">
+	
    	<div class="test">
-
+		
 				<form class="basic-grey">
 					<h1>Create Account</h1>
 					<label> <span>Username :</span> <input id="mail" type="text" />
@@ -41,7 +45,7 @@
 
 	<script>
 		$(document).ready(function() {
-			fb.html.simpleInitHTML($('#htmlContent').html(),function(){
+			fb.html.simpleInitHTML($('#htmlContent').html(),$('#navContent').html(),function(){
 				$('#registerAccountButton').click(
 						function() {
 							fb.account.createNewKey($('#mail').val(), $('#accountType').val(),
