--- a/WebContent/test_ItemList.html
+++ b/WebContent/test_ItemList.html
@@ -17,14 +17,14 @@
 <body>
 	<script src="fb.js"></script>
 	<script src="fb.item.js"></script>
-	
+
 	<script id="navContent" type="text">
-    <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
-					<input type="button" id="itemList" class="button" value="Items" />
-				</label> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
+     <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
 					<input type="button" id="rateItemList" class="button"
-					value="Rate Item" />
-				</label>
+					value="Update List" />
+				</label><label> <span>&nbsp;</span><input type="button"
+		id="logout" class="button" value="Logout" />
+	</label>
 	</script>
 	<script id="htmlContent" type="text">
     <div class="test">
@@ -46,8 +46,12 @@
 				}).error(function() {
 					fb.notification("An error has occurred", "error");
 				});
-				$("#itemList").click(function() {
-					window.location.href = 'test_ItemCreation.html';
+				$("#rateItemList").click(function() {
+					window.location.href = 'test_ItemList.html';
+				});
+				$('#logout').click(function() {
+					fb.account.logout();
+					window.location.replace('testLoginPage.html');
 				});
 
 			});
