iteam creation page fix

--- a/WebContent/sessionInfoUI.html
+++ b/WebContent/sessionInfoUI.html
@@ -30,7 +30,7 @@
 				value="Update View" />
 			</label> <label> <span>&nbsp;</span>
 				<input type="button" id="testViewButton" class="button"
-				value="Test View" />
+				value="Detailed View" />
 			</label>
 <label> <span>&nbsp;</span><input type="button"
 		id="logout" class="button" value="Logout" />
