--- a/WebContent/test_CreateFBSession.html
+++ b/WebContent/test_CreateFBSession.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -16,16 +16,13 @@
 </head>
 <body>
 	<script src="fb.js"></script>
-	
-	<script id="navContent" type="text">
+	<script id="loggedUser" type="text/javascript"></script>
+	<script id="navContent" type="text/javascript">
     <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
 					<input type="button" id="itemList" class="button" value="Items" />
-				</label> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
-					<input type="button" id="rateItemList" class="button"
-					value="Rate Item" />
-				</label>
+				</label> <span>&nbsp;</span><span>&nbsp;</span> 
 	</script>
-	<script id="htmlContent" type="text">
+	<script id="htmlContent" type="text/javascript">
     <div class="test">
 
 
@@ -52,7 +49,17 @@
 	
 	<script>
 		$(document).ready(function() {
-			fb.html.simpleInitHTML($('#htmlContent').html(),$('#navContent').html(),function(){
+			fb.html.simpleInitHTML($('#htmlContent').html(),$('#navContent').html(),$('#loggedUser').html(),function(){
+				//get user info
+				$.get('rest/users/logged').done(
+						function(user) {
+							 $('.loggedUserContainer').css('background','#007f58');
+								$('.loggedUserContainer').html('<span>Logged into <i><b>'+user.accountType+'<b></i> account as <i><b>'+user.userName+ '</b></i></span');
+								
+								});
+				$('#itemList').click(function() {
+					window.location.replace('test_ItemCreation.html');
+				});
 				$('#enableSession').click(function() {
 					var jqxhr = $.post(
 
